# RemotePlusTranslater

./: .gitignore  3.20 ファンタジア603.m4a  4.25 チャーミーズ205.m4a  5.1 フェスタ横須賀401.m4a  5.17　ファンタジア204.m4a  6.19 フェスタ葉山.m4a  ACCURACY_BALANCED_PROFILE.toml  AGENTS.md  CHECKPOINT.md  EULA_JA.md  FIXES.md  FIXES_REVIEW.md  PRIVACY_NOTICE_JA.md  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  build.ps1  config.toml  deploy_to_vps.ps1  doctor.bat  install.bat  install.ps1  install_voice_packs.ps1  launcher.py  prepare_models.bat  publish_release.ps1  pyproject.toml  qa.ps1  run.bat  run_app.ps1  run_app_silent.vbs  run_debug.bat  update_app.ps1  update_guard.py
benchmarks/: hotel_context_validation.json  hotel_sentences.json  hotel_translation_extended.json  hotel_translation_holdout.json  hotel_translation_validation.json  hymt2_runtime_probe.json  latest_hotel_report.json  latest_hybrid_reverse_report.json  latest_hymt2_report.json  latest_product_extended_report.json  latest_product_holdout_report.json  latest_product_validation_report.json  latest_public_audio_report.json  latest_translation_extended_report.json  latest_translation_holdout_report.json  latest_translation_validation_report.json  runtime_stress_20260710_145402.json  runtime_stress_20260710_145510.json  runtime_stress_20260710_145604.json
browser-app-profile/: Local State
desktop_browser_profile/: Local State
docs/: ARCHITECTURE_MODEL_REVIEW_KO.md  AUTHENTICODE_INTERNAL_KO.md  CALL_CENTER.md  COMMERCIAL_RELEASE_CHECKLIST.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FINE_TUNING.md  INTERNAL_COMMERCIAL_USE_SAFETY_KO.md  JAPANESE_COUNSEL_REVIEW_PACKET_JA.md  MODEL_EVALUATION_KO.md  QUALITY_REPORT.md  SYSTEM_GUIDE.md  TTS_PACKS.md  VPS_FIELD_UPGRADE_PLAN_KO.md
finetune/: README_KO.md  hotel_en_ko_seed.json
legal/: APACHE-2.0.txt  PROXY_TOOLS-BSD.txt  distributor-info.example.json
scripts/: analyze_timing_log.py  benchmark_hotel.py  benchmark_hymt2.py  benchmark_language_modes.py  benchmark_public_audio.py  benchmark_translation.py  benchmark_translation_extended.py  bundle_tts_packs.py  capture_manual_ui.ps1  evaluate_hybrid_reverse.py  evaluate_hymt2.py  evaluate_opus.py  generate_compliance.py  generate_release_manifest.py  prepare_commercial_release.py  prepare_finetune_data.py  prepare_vps_deployment.py  probe_hymt2_runtime.py  smoke_local_tts.py  stress_portable.ps1  stress_runtime.py  verify_vps_release.py
tests/: test_app_updates.py  test_audio.py  test_config.py  test_conversation.py  test_desktop.py  test_diagnostics.py  test_events.py  test_feedback.py  test_finetune_data.py  test_hymt2.py  test_model_promotion.py  test_phrasebook.py  test_reading.py  test_release_compliance.py  test_release_manifest.py  test_server.py  test_settings.py  test_stt.py  test_translation.py  test_translation_memory.py  test_tts.py  test_tts_packs.py  test_update_guard.py  test_vps_deployment.py  test_wav_import.py  test_web_ui.py  test_windows_launchers.py
translator_app/: __init__.py  app_updates.py  audio.py  cli.py  config.py  conversation.py  desktop.py  diagnostics.py  events.py  feedback.py  hymt2.py  languages.py  phrasebook.py  process_cleanup.py  quick_phrases.py  reading.py  server.py  settings.py  stt.py  (+5 more)
(+241 files in other folders)
