[project]
name = "local-conversation-translator"
version = "0.5.0"
description = "Local-first bidirectional hotel speech translator centered on Japanese"
requires-python = ">=3.11,<3.14"
dependencies = [
  "faster-whisper==1.2.1",
  "numpy==2.2.6",
  "sounddevice==0.5.3",
  "SoundCard==0.4.6",
  "pywin32==310",
  "fastapi==0.116.1",
  "pydantic==2.11.7",
  "uvicorn[standard]==0.35.0",
  "edge-tts==7.2.3",
  "pygame==2.6.1",
]

[project.optional-dependencies]
dev = ["pytest==8.4.1", "ruff==0.12.3", "pyinstaller==6.21.0", "httpx==0.28.1"]
m2m100 = [
  "torch==2.7.1",
  "transformers==4.53.3",
  "accelerate==1.9.0",
  "sentencepiece==0.2.1",
  "safetensors==0.5.3",
]

[project.scripts]
local-translator = "translator_app.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["translator_app*"]

[tool.setuptools.package-data]
translator_app = ["web/*"]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
